test/spec_vectors/memory_fill/fail/module_48.wat
(module (memory 1 1) (func (export "testfn") (memory.fill (i64.const 10) (i64.const 20) (i32.const 30))))